fix non readable font for black theme browser

--- a/unpacked/styles.css
+++ b/unpacked/styles.css
@@ -40,6 +40,7 @@ html, body {
   font-weight: 400;
   font-size: 14px;
 	letter-spacing: 0.25px;
+    background: #FFFFFF;
 }
 
 * {
